--- a/Odin.Data.Tests/packages.config
+++ b/Odin.Data.Tests/packages.config
@@ -8,4 +8,5 @@
   <package id="Moq" version="4.7.99" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
 </packages>
