--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -153,6 +153,10 @@
     <Compile Include="Persistence\Migrations\201709191945569_RemoveTransfereeAndConsultantAssignmentEntities.Designer.cs">
       <DependentUpon>201709191945569_RemoveTransfereeAndConsultantAssignmentEntities.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201709201941374_AddTransfereeInviteEnabledToOrders.cs" />
+    <Compile Include="Persistence\Migrations\201709201941374_AddTransfereeInviteEnabledToOrders.Designer.cs">
+      <DependentUpon>201709201941374_AddTransfereeInviteEnabledToOrders.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\TransfereesRepository.cs" />
@@ -199,6 +203,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201709191945569_RemoveTransfereeAndConsultantAssignmentEntities.resx">
       <DependentUpon>201709191945569_RemoveTransfereeAndConsultantAssignmentEntities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201709201941374_AddTransfereeInviteEnabledToOrders.resx">
+      <DependentUpon>201709201941374_AddTransfereeInviteEnabledToOrders.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
