--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -157,6 +157,10 @@
     <Compile Include="Persistence\Migrations\201709201941374_AddTransfereeInviteEnabledToOrders.Designer.cs">
       <DependentUpon>201709201941374_AddTransfereeInviteEnabledToOrders.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201709201950074_PopulateSeContactUidInUsers.cs" />
+    <Compile Include="Persistence\Migrations\201709201950074_PopulateSeContactUidInUsers.Designer.cs">
+      <DependentUpon>201709201950074_PopulateSeContactUidInUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
     <Compile Include="Persistence\TransfereesRepository.cs" />
@@ -206,6 +210,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201709201941374_AddTransfereeInviteEnabledToOrders.resx">
       <DependentUpon>201709201941374_AddTransfereeInviteEnabledToOrders.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201709201950074_PopulateSeContactUidInUsers.resx">
+      <DependentUpon>201709201950074_PopulateSeContactUidInUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
