--- a/Odin.IntegrationTests/packages.config
+++ b/Odin.IntegrationTests/packages.config
@@ -11,6 +11,9 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Testing" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Moq" version="4.7.99" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
@@ -21,4 +24,5 @@
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net461" />
   <package id="NUnit" version="3.8.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
 </packages>
