--- a/Odin.IntegrationTests/Odin.IntegrationTests.csproj
+++ b/Odin.IntegrationTests/Odin.IntegrationTests.csproj
@@ -152,6 +152,7 @@
     <Compile Include="GlobalSetUp.cs" />
     <Compile Include="Helpers\OrderHelper.cs" />
     <Compile Include="Isolated.cs" />
+    <Compile Include="OwinTestConf.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebApiBaseTest.cs" />
   </ItemGroup>
