--- a/Odin.IntegrationTests/Odin.IntegrationTests.csproj
+++ b/Odin.IntegrationTests/Odin.IntegrationTests.csproj
@@ -154,14 +154,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestAttributes\CleanData.cs" />
     <Compile Include="Controllers\Api\OrdersControllerTests.cs" />
     <Compile Include="Controllers\OrdersControllerTests.cs" />
     <Compile Include="Domain\OrderImporterTests.cs" />
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="GlobalSetUp.cs" />
     <Compile Include="Helpers\OrderHelper.cs" />
-    <Compile Include="Isolated.cs" />
-    <Compile Include="OwinTestConf.cs" />
+    <Compile Include="TestAttributes\Isolated.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebApiBaseTest.cs" />
   </ItemGroup>
